fix: update datetime validation
VACCINECER-412

--- a/src/app/create/test-form/test-form.component.html
+++ b/src/app/create/test-form/test-form.component.html
@@ -67,10 +67,9 @@
 				<ec-datetimepicker
 					#datepickerSampleDate
 					[label]="'certificateCreate.form.label.test.sampleDate' | translate"
-					[showTime]="true"
 					required
 					[errors]="testForm.get('sampleDate').errors"
-					id="dateOfVaccination"
+					id="sampleDate"
 				>
 				</ec-datetimepicker>
 			</ob-nested-form>
