fix: display doseNumber & totalDoses inputs on the same row
VACCINECER-763

--- a/src/app/create/vaccine-form/vaccine-form.component.html
+++ b/src/app/create/vaccine-form/vaccine-form.component.html
@@ -52,7 +52,9 @@
 				</mat-select>
 				<mat-error></mat-error>
 			</mat-form-field>
+		</div>
 
+		<div class="from">
 			<mat-form-field obErrorMessages class="mat-form-field-lg">
 				<mat-label>{{ "certificateCreate.form.label.vaccine.doseNumber" | translate }}</mat-label>
 				<input
@@ -65,7 +67,9 @@
 				/>
 				<mat-error></mat-error>
 			</mat-form-field>
+		</div>
 
+		<div class="to">
 			<mat-form-field obErrorMessages class="mat-form-field-lg">
 				<mat-label>{{ "certificateCreate.form.label.vaccine.totalDoses" | translate }}</mat-label>
 				<input
@@ -78,7 +82,9 @@
 				/>
 				<mat-error></mat-error>
 			</mat-form-field>
+		</div>
 
+		<div class="form-field">
 			<ob-nested-form
 				formControlName="dateOfVaccination"
 				[nestedForm]="datepickerVaccination.form"
