feat(vaccine): display information about doses
VACCINECER-701

--- a/src/app/create/vaccine-form/vaccine-form.component.html
+++ b/src/app/create/vaccine-form/vaccine-form.component.html
@@ -54,6 +54,11 @@
 			</mat-form-field>
 		</div>
 
+		<p class="form-field-info">
+			<strong>{{ "common.important" | translate }}: </strong>
+			{{ "certificateCreate.step-two.vaccinationinformation" | translate }}
+		</p>
+
 		<div class="from">
 			<mat-form-field obErrorMessages class="mat-form-field-lg">
 				<mat-label>{{ "certificateCreate.form.label.vaccine.doseNumber" | translate }}</mat-label>
