fix(creation): disable pointer event in the stepper's header
VACCINECER-693

--- a/src/app/create/create/create.component.scss
+++ b/src/app/create/create/create.component.scss
@@ -6,4 +6,8 @@ mat-horizontal-stepper {
 	.mat-step-label {
 		display: none;
 	}
+
+	::ng-deep .mat-horizontal-stepper-header {
+		pointer-events: none !important;
+	}
 }
