--- a/src/app/create/test-form/test-form.component.html
+++ b/src/app/create/test-form/test-form.component.html
@@ -61,9 +61,9 @@
 			<mat-form-field class="mat-form-field-lg" obErrorMessages>
 				<mat-label>{{ "certificateCreate.form.label.test.manufacturer" | translate }}</mat-label>
 				<mat-select formControlName="manufacturer" id="manufacturer">
-					<mat-option *ngFor="let option of getManufacturerOfTest()" [value]="option">
-						{{ option.display }}
-					</mat-option>
+					<mat-optgroup *ngFor="let option of getManufacturerOfTest()" [label]="option.group">
+						<mat-option [value]="option">{{ option.display }}</mat-option>
+					</mat-optgroup>
 				</mat-select>
 				<mat-error></mat-error>
 			</mat-form-field>
