feat: show helpline phone number as link
VACCINECER-881

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,7 @@
 			<ng-container dropdown-content>
 				<h4>{{ "support.title" | translate }}</h4>
 				<p>{{ "support.instructions" | translate }}</p>
+				<a href="tel:+41584658888">058 465 88 88</a>
 			</ng-container>
 		</ob-dropdown>
 	</ng-template>
