feat(home): add documentation for issuers
VACCINECER-869

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -52,6 +52,17 @@
 					>{{ "home.training" | translate }}
 				</a>
 			</li>
+			<li>
+				<a
+					href="{{ 'home.issuer.url' | translate }}"
+					target="_blank"
+					rel="noopener noreferrer"
+					id="issuer_link"
+				>
+					<span class="icon-link"><span class="fas fa-external-link-alt"></span></span
+					>{{ "home.issuer" | translate }}
+				</a>
+			</li>
 		</ul>
 	</section>
 </div>
