--- a/src/app/create/date-time-picker/date-time-picker.component.html
+++ b/src/app/create/date-time-picker/date-time-picker.component.html
@@ -6,7 +6,7 @@
 		<mat-datepicker #datepicker startView="month"></mat-datepicker>
 		<mat-error></mat-error>
 	</mat-form-field>
-	<mat-form-field *ngIf="showTime" obErrorMessages class="mat-form-field-lg">
+	<mat-form-field *ngIf="showTime" obErrorMessages class="mat-form-field-lg time-input">
 		<!-- This label is needed for the time polyfill library -->
 		<label [id]="id + '-time-label'" class="time-polyfill-label" *ngIf="timePolyfillNeeded"></label>
 		<input [id]="id + '-time'" type="time" matInput formControlName="time" />
