Date and time input improvements

--- a/src/app/create/test-form/test-form.component.html
+++ b/src/app/create/test-form/test-form.component.html
@@ -78,6 +78,7 @@
 					required
 					[errors]="testForm.get('sampleDate').errors"
 					id="sampleDate"
+					[defaultValue]="getCurrentDate()"
 				>
 				</ec-datetimepicker>
 			</ob-nested-form>
