--- a/src/app/create/date-time-picker/date-time-picker.component.html
+++ b/src/app/create/date-time-picker/date-time-picker.component.html
@@ -1,7 +1,7 @@
 <ng-container [formGroup]="form">
 	<mat-form-field *ngIf="showDate" obErrorMessages class="mat-form-field-lg">
 		<mat-label>{{ label }}</mat-label>
-		<input [id]="id + '-date'" matInput formControlName="date" [matDatepicker]="datepicker" />
+		<input [id]="id + '-date'" matInput formControlName="date" [matDatepicker]="datepicker" [max]="maxDate" />
 		<mat-datepicker-toggle matSuffix [for]="datepicker"></mat-datepicker-toggle>
 		<mat-datepicker #datepicker startView="month"></mat-datepicker>
 		<mat-error></mat-error>
