--- a/src/app/create/recovery-form/recovery-form.component.html
+++ b/src/app/create/recovery-form/recovery-form.component.html
@@ -28,6 +28,7 @@
 					required
 					[errors]="recoveryForm.get('birthdate').errors"
 					id="birthdate"
+					shortDateAllowed="true"
 				>
 				</ec-datetimepicker>
 			</ob-nested-form>
