Improve clear button

--- a/src/app/create/test-form/test-form.component.html
+++ b/src/app/create/test-form/test-form.component.html
@@ -80,8 +80,9 @@
 					role="button"
 					[obInputClear]="rapidTestCompleteControl"
 					(onClear)="onRapidTestCompleteClear()"
+					class="clear-buton"
 				>
-					<mat-icon svgIcon="cancel-circle" class="ob-icon"></mat-icon>
+					<mat-icon svgIcon="cancel-circle" class="ob-icon clear-icon"></mat-icon>
 					<span class="sr-only">{{ "i18n.common.clear" | translate }}</span>
 				</button>
 				<mat-error></mat-error>
