--- a/src/app/create/test-form/test-form.scss
+++ b/src/app/create/test-form/test-form.scss
@@ -20,3 +20,11 @@
 .radio-button-field.additional-padding {
 	padding-bottom: 24px;
 }
+
+.clear-button {
+	margin-top: -4px;
+}
+
+.clear-icon {
+	margin: -4px 0;
+}
