added some more ID's to elements

--- a/src/app/create/download/download.component.html
+++ b/src/app/create/download/download.component.html
@@ -16,8 +16,8 @@
 		</button>
 	</div>
 	<div class="uvci">
-		<img *ngIf="safeResourceUrl" [src]="safeResourceUrl" alt="QrCode of certificate" />
-		<p>{{ createCertificateResponse?.uvci }}</p>
+		<img *ngIf="safeResourceUrl" id="qrCode" [src]="safeResourceUrl" alt="QrCode of certificate" />
+		<p id="uniqueCode">{{ createCertificateResponse?.uvci }}</p>
 	</div>
 </div>
 
