--- a/src/app/create/test-form/test-form.component.html
+++ b/src/app/create/test-form/test-form.component.html
@@ -72,6 +72,7 @@
 				<input
 					type="text"
 					matInput
+					id="manufacturer"
 					[formControl]="rapidTestCompleteControl"
 					[matAutocomplete]="auto"
 					#rapidTestAutocomplete
