handle issuableAbroad and notIssuableCh case in UI
Signed-off-by: mofobo <mohammed.fonsecaboukhalat@bit.admin.ch>

--- a/src/app/create/vaccine-form/vaccine-form.component.html
+++ b/src/app/create/vaccine-form/vaccine-form.component.html
@@ -48,15 +48,10 @@
 	<fieldset class="form-group">
 		<legend class="padding-top">{{ "certificateCreate.form.group.vaccine" | translate }}</legend>
 
-		<p class="form-field-info" *ngIf="isNotIssuableProduct">
-			<strong>{{ "common.important" | translate }}: </strong>
-			{{ "certificateCreate.step-two.nonissuablevaccineproductinformation" | translate }}
-		</p>
-
 		<div class="form-field">
 			<mat-form-field class="mat-form-field-lg" obErrorMessages>
 				<mat-label>{{ "certificateCreate.form.label.vaccine.medicalProduct" | translate }}</mat-label>
-				<mat-select formControlName="medicalProduct" id="medicalProduct" (selectionChange)="onMedicalProductSelectionChanged($event.value)">
+				<mat-select formControlName="medicalProduct" id="medicalProduct">
 					<mat-optgroup *ngFor="let option of getMedicalProducts()" [label]="option.group">
 						<mat-option [value]="option">{{ option.display }}</mat-option>
 					</mat-optgroup>
@@ -127,6 +122,13 @@
 				</mat-select>
 				<mat-error></mat-error>
 			</mat-form-field>
+
+			<mat-checkbox formControlName="checkBox"
+						  aria-label="Hint"
+						  *ngIf="vaccineForm.get('checkBox').enabled">
+				{{ "certificateCreate.step-two.nonissuablevaccineproductinformation" | translate }}
+			</mat-checkbox>
+			<mat-hint class="mat-error" *ngIf="true">Error Message</mat-hint>
 		</div>
 	</fieldset>
 
