--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,5 +1,10 @@
 @import "~@oblique/oblique/styles/scss/core/variables";
 @import "~@oblique/oblique/styles/scss/core/mixins/layout";
+@import '~@angular/material/theming';
+.mat-checkbox-layout {
+	white-space: normal !important;
+	text-align: justify;
+}
 
 .cdk-overlay-container {
 	z-index: 10000;
