--- a/src/app/create/recovery-form/recovery-form.component.html
+++ b/src/app/create/recovery-form/recovery-form.component.html
@@ -10,13 +10,13 @@
 
 			<mat-form-field obErrorMessages class="mat-form-field-lg">
 				<mat-label>{{ "certificateCreate.form.label.personalData.firstName" | translate }}</mat-label>
-				<input type="text" matInput formControlName="firstName" id="firstName"/>
+				<input type="text" matInput formControlName="firstName" id="firstName" />
 				<mat-error></mat-error>
 			</mat-form-field>
 
 			<mat-form-field obErrorMessages class="mat-form-field-lg">
 				<mat-label>{{ "certificateCreate.form.label.personalData.surName" | translate }}</mat-label>
-				<input type="text" matInput formControlName="surName" id="surName"/>
+				<input type="text" matInput formControlName="surName" id="surName" />
 				<mat-error></mat-error>
 			</mat-form-field>
 
@@ -74,9 +74,7 @@
 				<mat-error></mat-error>
 			</mat-form-field>
 
-			<mat-checkbox formControlName="checkBox"
-						  aria-label="Hint"
-						  *ngIf="recoveryForm.get('checkBox').enabled">
+			<mat-checkbox formControlName="checkBox" aria-label="Hint" *ngIf="recoveryForm.get('checkBox').enabled">
 				{{ "certificateCreate.step-two.nonissuablevaccineproductinformation" | translate }}
 			</mat-checkbox>
 		</div>
