--- a/src/app/create/vaccine-form/vaccine-form.component.html
+++ b/src/app/create/vaccine-form/vaccine-form.component.html
@@ -10,13 +10,13 @@
 
 			<mat-form-field obErrorMessages class="mat-form-field-lg">
 				<mat-label>{{ "certificateCreate.form.label.personalData.firstName" | translate }}</mat-label>
-				<input type="text" matInput formControlName="firstName" id="firstName" />
+				<input type="text" matInput formControlName="firstName" id="firstName"/>
 				<mat-error></mat-error>
 			</mat-form-field>
 
 			<mat-form-field obErrorMessages class="mat-form-field-lg">
 				<mat-label>{{ "certificateCreate.form.label.personalData.surName" | translate }}</mat-label>
-				<input type="text" matInput formControlName="surName" id="surName" />
+				<input type="text" matInput formControlName="surName" id="surName"/>
 				<mat-error></mat-error>
 			</mat-form-field>
 
@@ -123,9 +123,46 @@
 				<mat-error></mat-error>
 			</mat-form-field>
 
-			<mat-checkbox formControlName="checkBox" aria-label="Hint" *ngIf="vaccineForm.get('checkBox').enabled">
-				{{ "certificateCreate.step-two.nonissuablevaccineproductinformation" | translate }}
-			</mat-checkbox>
+			<div *ngIf="vaccineForm.get('checkBox').enabled" style="display: inline-block">
+				<mat-checkbox formControlName="checkBox" aria-label="Hint">
+					{{ "certificateCreate.step-two.nonissuablevaccineproductinformation" | translate }}
+				</mat-checkbox>
+
+				<mat-error
+					*ngIf="vaccineForm.get('checkBox').errors?.required">{{ "i18n.validation.required" | translate }}</mat-error>
+
+				<ob-collapse column-main-content iconPosition="left" [active]="false">
+    			<span obCollapseHeader>
+       		 		{{ "certificateCreate.step-two.moreInformations" | translate }}
+    			</span>
+					<p obCollapseMain> Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy
+						eirmod
+						tempor invidunt ut labore et
+						dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
+						et ea
+						rebum. Stet
+						clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum
+						dolor
+						sit amet,
+						consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore
+						magna
+						aliquyam erat, sed
+						diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd
+						gubergren, no sea
+						takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur
+						sadipscing elitr, sed
+						diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam
+						voluptua.
+						At vero eos et
+						accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus
+						est
+						Lorem ipsum
+					</p>
+				</ob-collapse>
+
+			</div>
+
+
 		</div>
 	</fieldset>
 
