--- a/src/app/create/vaccine-form/vaccine-form.component.html
+++ b/src/app/create/vaccine-form/vaccine-form.component.html
@@ -123,7 +123,7 @@
 				<mat-error></mat-error>
 			</mat-form-field>
 
-			<div *ngIf="vaccineForm.get('checkBox').enabled" style="display: inline-block">
+			<div *ngIf="vaccineForm.get('checkBox').enabled">
 				<mat-checkbox formControlName="checkBox" aria-label="Hint">
 					{{ "certificateCreate.step-two.nonissuablevaccineproductinformation" | translate }}
 				</mat-checkbox>
@@ -132,21 +132,12 @@
 					"i18n.validation.required" | translate
 				}}</mat-error>
 
-				<ob-collapse column-main-content iconPosition="left" [active]="false">
+				<ob-collapse column-main-content iconPosition="left" [active]="false" style="margin-left: 25px">>
 					<span obCollapseHeader>
-						{{ "certificateCreate.step-two.moreInformations" | translate }}
+						{{ "certificateCreate.step-two.moreInfosLabel" | translate }}
 					</span>
-					<p obCollapseMain style="text-align: justify">
-						Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt
-						ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo
-						dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor
-						sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
-						invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et
-						justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem
-						ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy
-						eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos
-						et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus
-						est Lorem ipsum
+					<p obCollapseMain style="text-align: justify; margin-left: 25px">
+						{{ "certificateCreate.step-two.moreInfosMessage" | translate }}
 					</p>
 				</ob-collapse>
 			</div>
