format: clean code

--- a/src/app/create/recovery-form/recovery-form.component.html
+++ b/src/app/create/recovery-form/recovery-form.component.html
@@ -10,13 +10,13 @@
 
 			<mat-form-field obErrorMessages class="mat-form-field-lg">
 				<mat-label>{{ "certificateCreate.form.label.personalData.firstName" | translate }}</mat-label>
-				<input type="text" matInput formControlName="firstName" id="firstName"/>
+				<input type="text" matInput formControlName="firstName" id="firstName" />
 				<mat-error></mat-error>
 			</mat-form-field>
 
 			<mat-form-field obErrorMessages class="mat-form-field-lg">
 				<mat-label>{{ "certificateCreate.form.label.personalData.surName" | translate }}</mat-label>
-				<input type="text" matInput formControlName="surName" id="surName"/>
+				<input type="text" matInput formControlName="surName" id="surName" />
 				<mat-error></mat-error>
 			</mat-form-field>
 
@@ -81,9 +81,10 @@
 
 				<mat-error *ngIf="recoveryForm.get('checkBox').errors?.required" style="margin-left: 25px">{{
 					"i18n.validation.required" | translate
-					}}</mat-error>
+				}}</mat-error>
 
-				<ob-collapse column-main-content iconPosition="left" [active]="false" style="margin-left: 25px">>
+				<ob-collapse column-main-content iconPosition="left" [active]="false" style="margin-left: 25px"
+					>>
 					<span obCollapseHeader>
 						{{ "certificateCreate.step-two.moreInfosLabel" | translate }}
 					</span>
