--- a/src/app/create/vaccine-form/vaccine-form.component.html
+++ b/src/app/create/vaccine-form/vaccine-form.component.html
@@ -132,7 +132,8 @@
 					"i18n.validation.required" | translate
 				}}</mat-error>
 
-				<ob-collapse column-main-content iconPosition="left" [active]="false" style="margin-left: 25px">>
+				<ob-collapse column-main-content iconPosition="left" [active]="false" style="margin-left: 25px"
+					>>
 					<span obCollapseHeader>
 						{{ "certificateCreate.step-two.moreInfosLabel" | translate }}
 					</span>
