--- a/src/app/create/vaccine-form/vaccine-form.component.html
+++ b/src/app/create/vaccine-form/vaccine-form.component.html
@@ -51,9 +51,9 @@
 		<div class="form-field">
 			<mat-form-field class="mat-form-field-lg" obErrorMessages>
 				<mat-label>{{ "certificateCreate.form.label.vaccine.medicalProduct" | translate }}</mat-label>
-				<mat-select formControlName="medicalProduct" id="medicalProduct">
+				<mat-select formControlName="medicalProduct" id="medicalProduct" panelClass="full-width">
 					<mat-optgroup *ngFor="let option of getMedicalProducts()" [label]="option.group">
-						<mat-option [value]="option">{{ option.display }}</mat-option>
+						<mat-option [value]="option" class="full-width">{{ option.display }}</mat-option>
 					</mat-optgroup>
 				</mat-select>
 				<mat-error></mat-error>
